feat: 完成 ZAFrida 0.3.7 稳定性与多环境升级